--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.16",
     "@tailwindcss/vite": "^4.1.16",
+    "framer-motion": "^12.23.24",
     "install": "^0.13.0",
     "locomotive-scroll": "^4.1.4",
+    "lucide-react": "^0.552.0",
     "npm": "^11.6.2",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
